--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,13 @@
 title: "Juhl — AI Journal"
+description: "Notes, reflections, and progress from my AI learning journey."
 theme: minima
+show_excerpts: true
+minima:
+  social_links:
+    - { platform: github,  user_url: "https://github.com/<your-username>" }
+    # - { platform: x,       user_url: "https://x.com/<your-handle>" }
+    # - { platform: linkedin,user_url: "https://www.linkedin.com/in/<your-handle>/" }
+# Simple top nav
+header_pages:
+  - index.md
+timezone: "Etc/UTC"   # change if you want local dates
