--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Juhl — AI Journal"
+title: "Juhl.AI Journal"
 description: "Notes, reflections, and progress from my AI learning journey."
 theme: minima
 show_excerpts: true
