--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ theme: jekyll-theme-cayman
 show_excerpts: true
 minima:
   social_links:
-    - { platform: github,  user_url: "https://github.com/<your-username>" }
+    - { platform: github,  user_url: "https://github.com/ajuhl" }
     # - { platform: x,       user_url: "https://x.com/<your-handle>" }
     # - { platform: linkedin,user_url: "https://www.linkedin.com/in/<your-handle>/" }
 # Simple top nav
